--- a/app/elements/submission/tasks/coder-javaut-task.html
+++ b/app/elements/submission/tasks/coder-javaut-task.html
@@ -1,5 +1,6 @@
 <link rel="import" href="general-code-task.html">
 <link rel="import" href="/elements/code-editor/consoles/test-stats-console.html">
+<link rel="import" href="/elements/behaviors/wsreader-behavior.html">
 
 <dom-module id="coder-javaut-task">
 	<style>
@@ -16,6 +17,9 @@
 	<script>
 		Polymer({
 			is: 'coder-javaut-task',
+			behaviors: [
+				Behaviors.WSReaderBehavior
+			],
 			properties: {
 				task: {
 					type: Object,
@@ -34,18 +38,7 @@
 			observers: [
 				'afterPropertiesSet(task)'
 			],
-			listeners: {
-				'ws-onerror': 'onWsError',
-				'ws-onmessage': 'onWsMessage',
-				'ws-onopen': 'onWsOpen'
-			},
-			onWsOpen: function(){
-				console.log('WS OPENED');
-			},
-			onWsError: function(err){
-				console.log(err);
-			},
-			onWsMessage: function(data){
+			_onWsMessage: function(data){
 				this.$.console.setOutput(JSON.parse(data.detail));
 				this.finishButtonClass = this.$.console.allGreen() ? 'success' : 'error';
 			},
