--- a/app/elements/candidates/candidate-card.html
+++ b/app/elements/candidates/candidate-card.html
@@ -1,6 +1,7 @@
 <link rel="import" href="/bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
+<link rel="import" href="/elements/behaviors/card-behavior.html">
 
 <dom-module id="candidate-card">
 	<style>
@@ -48,8 +49,7 @@
 	</style>
 	<template>
 		<a href="{{goTo}}">
-			<paper-material animated elevation="{{elevation}}"
-				on-mouseover="onHovered" on-mouseout="onUnhovered">
+			<paper-material animated elevation="{{elevation}}">
 				<div class="cardTop" align="center">
 					<div class="cardTopImage">
 						 <text class="letter" x="0" y="0">{{getInitialLetter(user)}}</text>
@@ -65,14 +65,13 @@
 	<script>
 		Polymer({
 			is: 'candidate-card',
+			behaviors: [
+				Behaviors.CardBehavior
+			],
 			properties: {
 				user: {
 					type: Object,
 					reflectToAttribute: true
-				},
-				elevation: {
-					type: Number,
-					value: 1
 				}
 			},
 			ready: function(){
@@ -94,12 +93,6 @@
 			},
 			getInitialLetter: function(user) {
 				return (user.Name || user.Address).charAt(0).toUpperCase();
-			},
-			onHovered: function () {
-				this.elevation = 5;
-			},
-			onUnhovered: function () {
-				this.elevation = 1;
 			}
 		});
 	</script>
