--- a/app/elements/services/challenge-service.html
+++ b/app/elements/services/challenge-service.html
@@ -1,4 +1,5 @@
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/elements/behaviors/service-behavior.html">
 
 <dom-module id="challenge-service">
 	<style>
@@ -41,6 +42,9 @@
 	<script>
 		Polymer({
 			is: 'challenge-service',
+			behaviors: [
+				Behaviors.ServiceBehavior
+			],
 			properties: {
 				challenge: {
 					type: Object,
@@ -52,9 +56,6 @@
 					notify: true,
 					reflectToAttribute: true
 				}
-			},
-			ready: function(){
-				this.app = document.querySelector('app-element');
 			},
 			save: function(challenge){
 				this.app.startLoading();
@@ -80,10 +81,6 @@
 			},
 			_onResponse: function(){
 				this.app.stopLoading();
-			},
-			_onError: function(err){
-				this.app.stopLoading();
-				util.error(err);
 			}
 		});
 	</script>
