--- a/app/elements/services/result-service.html
+++ b/app/elements/services/result-service.html
@@ -31,6 +31,9 @@
 	<script>
 		Polymer({
 			is: 'result-service',
+			behaviors: [
+				Behaviors.ServiceBehavior
+			],
 			properties: {
 				result: {
 					type: Object,
@@ -42,9 +45,6 @@
 					notify: true,
 					reflectToAttribute: true
 				}
-			},
-			ready: function(){
-				this.app = document.querySelector('app-element');
 			},
 			getByUserAndChallengeId: function(userKey, challengeKey){
 				this.app.startLoading();
@@ -58,10 +58,6 @@
 			},
 			_onResponse: function(){
 				this.app.stopLoading();
-			},
-			_onError: function(err){
-				this.app.stopLoading();
-				util.error(err);
 			}
 		});
 	</script>
