--- a/app/elements/services/template-service.html
+++ b/app/elements/services/template-service.html
@@ -1,4 +1,6 @@
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/elements/behaviors/service-behavior.html">
+
 
 <dom-module id="template-service">
 	<style>
@@ -26,6 +28,9 @@
 	<script>
 		Polymer({
 			is: 'template-service',
+			behaviors: [
+				Behaviors.ServiceBehavior
+			],
 			properties: {
 				templates: {
 					type: Array,
@@ -39,9 +44,6 @@
 				templateCount: {
 					type: Number
 				}
-			},
-			ready: function(){
-				this.app = document.querySelector('app-element');
 			},
 			getTemplates: function(language) {
 				this.app.startLoading();
@@ -85,10 +87,6 @@
 					this.app.stopLoading();
 					this.fire('templates', this.templates);
 				}
-			},
-			_onError: function(err) {
-				this.app.stopLoading();
-				util.error(err);
 			}
 		});
 	</script>
