--- a/app/elements/services/user-service.html
+++ b/app/elements/services/user-service.html
@@ -1,4 +1,5 @@
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/elements/behaviors/service-behavior.html">
 
 <dom-module id="user-service">
 	<style>
