--- a/app/elements/submission/tasks/canvas-game-task.html
+++ b/app/elements/submission/tasks/canvas-game-task.html
@@ -5,7 +5,6 @@
 <link rel="import" href="/elements/code-editor/code-editor.html">
 <link rel="import" href="/elements/code-editor/language-selector.html">
 <link rel="import" href="/elements/services/template-service.html">
-<link rel="import" href="/elements/behaviors/wsreader-behavior.html">
 <link rel="import" href="task-display.html">
 <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
@@ -104,6 +103,8 @@
 		</div>
 		<paper-toast id="toast"></paper-toast>
 	</template>
+
+	<script type="application/javascript" src="/elements/behaviors/wsreader-behavior.js"></script>
 	<script>
 		Polymer({
 			// TODO: Extract canvas into own component
