--- a/app/elements/submission/tasks/javaut-task.html
+++ b/app/elements/submission/tasks/javaut-task.html
@@ -1,6 +1,5 @@
 <link rel="import" href="general-code-task.html">
 <link rel="import" href="/elements/code-editor/consoles/javaut-console.html">
-<link rel="import" href="/elements/behaviors/wsreader-behavior.html">
 
 <dom-module id="javaut-task">
 	<style>
@@ -14,6 +13,7 @@
 			<javaut-console id="console"></javaut-console>
 		</code-task>
 	</template>
+	<script type="application/javascript" src="/elements/behaviors/wsreader-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'javaut-task',
