--- a/app/elements/task/task-card.html
+++ b/app/elements/task/task-card.html
@@ -4,7 +4,6 @@
 <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
 <link rel="import" href="/elements/skill/skill-list.html">
-<link rel="import" href="/elements/behaviors/card-behavior.html">
 
 <dom-module id="task-card">
 	<style>
@@ -66,6 +65,7 @@
 			</div>
 		</paper-material>
 	</template>
+	<script type="application/javascript" src="/scripts/behaviors/card-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'task-card',
