--- a/app/elements/challenge/challenge-card.html
+++ b/app/elements/challenge/challenge-card.html
@@ -1,7 +1,6 @@
 <link rel="import" href="/bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
 <link rel="import" href="/bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="/elements/behaviors/card-behavior.html">
 
 <dom-module id="challenge-card">
 	<style>
@@ -61,6 +60,7 @@
 			</div>
 		</paper-material>
 	</template>
+	<script type="application/javascript" src="/scripts/behaviors/card-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'challenge-card',
