--- a/app/elements/services/task-service.html
+++ b/app/elements/services/task-service.html
@@ -1,6 +1,4 @@
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="/elements/behaviors/service-behavior.html">
-
 
 <dom-module id="task-service">
 	<style>
@@ -48,6 +46,7 @@
 			>
 		</iron-ajax>
 	</template>
+	<script type="application/javascript" src="/scripts/behaviors/service-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'task-service',
@@ -106,7 +105,7 @@
 			},
 			_onResponse: function(){
 				this.app.stopLoading();
-			},
+			}
 		});
 	</script>
 </dom-module>
