--- a/app/elements/services/user-service.html
+++ b/app/elements/services/user-service.html
@@ -1,5 +1,4 @@
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="/elements/behaviors/service-behavior.html">
 
 <dom-module id="user-service">
 	<style>
@@ -48,6 +47,7 @@
 			on-error="_onError">
 		</iron-ajax>
 	</template>
+	<script type="application/javascript" src="/scripts/behaviors/service-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'user-service',
