--- a/app/elements/submission/tasks/output-match-task.html
+++ b/app/elements/submission/tasks/output-match-task.html
@@ -1,6 +1,5 @@
 <link rel="import" href="general-code-task.html">
 <link rel="import" href="/elements/code-editor/consoles/test-stats-console.html">
-<link rel="import" href="/elements/behaviors/wsreader-behavior.html">
 
 <dom-module id="output-match-task">
 	<style>
@@ -14,6 +13,7 @@
 			<test-stats-console id="console" task="{{task}}"></test-stats-console>
 		</code-task>
 	</template>
+	<script type="application/javascript" src="/elements/behaviors/wsreader-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'output-match-task',
@@ -34,6 +34,10 @@
 			observers: [
 				'afterPropertiesSet(task)'
 			],
+			_onWsMessage: function(data){
+				//default implementation
+				this.$.console.setOutput(JSON.parse(data.detail));
+			},
 			afterPropertiesSet: function(){
 				this.control = {};
 				var component = this;
