--- a/app/elements/submission/tasks/simple-code-task.html
+++ b/app/elements/submission/tasks/simple-code-task.html
@@ -1,6 +1,5 @@
 <link rel="import" href="general-code-task.html">
 <link rel="import" href="/elements/code-editor/consoles/simple-console.html">
-<link rel="import" href="/elements/behaviors/wsreader-behavior.html">
 
 <dom-module id="simple-code-task">
 	<style>
@@ -14,6 +13,7 @@
 			<simple-console id="console"></simple-console>
 		</code-task>
 	</template>
+	<script type="application/javascript" src="/elements/behaviors/wsreader-behavior.js"></script>
 	<script>
 		Polymer({
 			is: 'simple-code-task',
@@ -32,6 +32,9 @@
 			observers: [
 				'afterPropertiesSet(task)'
 			],
+			_onWsMessage: function(data){
+				this.$.console.setOutput(JSON.parse(data.detail));
+			},
 			afterPropertiesSet: function(){
 				this.control = {};
 				var component = this;
