--- a/app/elements/login/login-wizard/login-wizard.html
+++ b/app/elements/login/login-wizard/login-wizard.html
@@ -10,19 +10,24 @@
 
 <dom-module id="login-wizard">
 	<template>
-		<cookie-service id="cookieService" user="{{user}}"></cookie-service>
 		<neon-animated-pages id="pages" class="flex" selected="[[selected]]" entry-animation="[[entryAnimation]]" exit-animation="[[exitAnimation]]">
 			<login-page-email email="{{email}}" on-next="next"></login-page-email>
 			<login-page-password email="{{email}}" password="{{password}}" on-next="next" on-prev="prev"></login-page-password>
 			<login-page-u2f on-next="next"></login-page-u2f>
 		</neon-animated-pages>
 		<paper-toast id="toastCredentials" text="Invalid username/e-mail and password combination, please try again."></paper-toast>
-		<iron-ajax id="companyRequest"
+		<iron-ajax id="userRequest"
+		  	handle-as="json"
+		  	on-response="_onUser"
+		  	on-error="_onUserError"
+		    method="GET">
+		</iron-ajax>
+		<iron-ajax id="organizationRequest"
 			handle-as="json"
-			on-response="onCompany"
-			on-error="onCompanyError"
+			on-response="onOrganization"
+			on-error="onOrganizationError"
 			with-credentials="true"
-			url$="{{getCompanyUrl()}}"
+			url$="{{getOrganizationUrl()}}"
 			method="GET"
 		>
 		</iron-ajax>
@@ -63,11 +68,11 @@ Polymer({
 	listeners: {
 		'neon-animation-finish': '_afterNeon',
 		'cookie-user-changed': '_cookieUserChanged',
-		'cookie-error': '_cookieError',
+		'cookie-error': '_cookieError'
 	},
 	_cookieUserChanged: function(user){
 		localStorage.user = JSON.stringify(user);
-		this.$.companyRequest.generateRequest();
+		this.$.organizationRequest.generateRequest();
 	},
 	setEmail: function(email){
 		this.email = email;
@@ -89,7 +94,7 @@ Polymer({
 	},
 	next: function() {
 		if (this.selected === pagePassword && !u2fRequired) {
-			this.requestToken();
+			this.login();
 			return;
 		}
 		// Can not get further than U2F.
@@ -100,11 +105,14 @@ Polymer({
 		this.exitAnimation = 'slide-left-animation';
 		this.selected++;
 	},
-	requestToken: function() {
-		this.$.cookieService.getCookie('Basic ' + btoa(this.email + ':' + this.password));
+	login: function() {
+		this.$.userRequest.headers = {'Authorization' : 'Basic ' + btoa(this.email + ':' + this.password)};
+		this.$.userRequest.url = util.build('/user');
+		this.$.userRequest.generateRequest();
 	},
-	_cookieError: function(e, err) {
+	_onUserError: function(err) {
 		if (err.detail.request.xhr.status !== 401) {
+			console.log('401');
 			util.error(err);
 			return;
 		}
@@ -119,18 +127,21 @@ Polymer({
 		this.exitAnimation = 'slide-right-animation';
 		this.selected = pageEmail;
 	},
-	onCompany: function() {
-		localStorage.company = JSON.stringify(this.$.companyRequest.lastResponse);
+	_onUser: function(r){
+		// A successful response means the user has successfully authenticated
+		localStorage.authorization = 'Basic ' + btoa(this.email + ':' + this.password);
+		localStorage.user = JSON.stringify(r.detail.response);
+		this.$.organizationRequest.generateRequest();
+	},
+	onOrganization: function() {
+		localStorage.organization = JSON.stringify(this.$.organizationRequest.lastResponse);
 		app.login();
 	},
-	onCompanyError: function() {
+	onOrganizationError: function() {
 		app.login();
 	},
-	getCookieUrl: function() {
-		return util.build('/cookie');
-	},
-	getCompanyUrl: function() {
-		return util.build('/user/company');
+	getOrganizationUrl: function() {
+		return util.build('/user/organization');
 	}
 });
 </script>
