refactor requests   * create new coduno-iron-ajax element which wraps functionality of the iron-ajax and sends the requests with authorization if any   * replace all iron-ajax with new element

--- a/app/elements/candidates/candidate-page.html
+++ b/app/elements/candidates/candidate-page.html
@@ -29,7 +29,7 @@
 				}
 			},
 			getChallenges: function () {
-				this.$.challengeService.getByCompanyId(util.company().Key);
+				this.$.challengeService.getByOrganizationId(util.organization().id);
 			},
 			getCandidates: function () {
 				this.$.candidateList.getCandidates();
