--- a/app/elements/services/cookie-service.html
+++ b/app/elements/services/cookie-service.html
@@ -1,6 +1,7 @@
-<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/elements/coduno-iron-ajax.html">
 <link rel="import" href="user-service.html">
 
+<!--Since we don't use cookie authentication anymore, this should be renamed to something appropriate-->
 <dom-module id="cookie-service">
 	<style>
 		:host {
@@ -9,15 +10,13 @@
 	</style>
 	<template>
 		<user-service id="userService" user="{{user}}"></user-service>
-		<iron-ajax
+		<coduno-iron-ajax
 			id="getCookie"
 			method="PUT"
-			content-type="application/json"
 			last-response="{{profile}}"
-			with-credentials="true"
 			on-response="_onResponse"
 			on-error="_onError">
-		</iron-ajax>
+		</coduno-iron-ajax>
 	</template>
 	<script>
 		Polymer({
@@ -31,11 +30,6 @@
 			},
 			_userChanged: function(){
 				this.fire('cookie-user-changed', this.user);
-			},
-			getCookie: function(authorization){
-				this.$.getCookie.url = util.build('/cookie');
-				this.$.getCookie.headers = { 'Authorization': authorization};
-				this.$.getCookie.generateRequest();
 			},
 			_onResponse: function(){
 				this.$.userService.whoAmI();
