--- a/app/elements/services/submission-service.html
+++ b/app/elements/services/submission-service.html
@@ -1,4 +1,4 @@
-<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/elements/coduno-iron-ajax.html">
 
 <dom-module id="submission-service">
 	<style>
@@ -7,24 +7,19 @@
 		}
 	</style>
 	<template>
-		<iron-ajax
+		<coduno-iron-ajax
 			id="getMultiSubmissions"
 			method="GET"
-			handle-as="json"
-			last-response="{{submissions}}"
-			with-credentials="true"
 			on-response="_onResponse"
 			on-error="_onError">
-		</iron-ajax>
-		<iron-ajax
+		</coduno-iron-ajax>
+		<coduno-iron-ajax
 			id="getSingleSubmission"
 			method="GET"
-			handle-as="json"
 			last-response="{{submission}}"
-			with-credentials="true"
 			on-response="_onResponse"
 			on-error="_onError">
-		</iron-ajax>
+		</coduno-iron-ajax>
 	</template>
 	<script type="application/javascript" src="/scripts/behaviors/service-behavior.js"></script>
 	<script>
@@ -45,14 +40,14 @@
 					reflectToAttribute: true
 				}
 			},
-			getById: function(key){
+			getById: function(id){
 				this.app.startLoading();
-				this.$.getSingleSubmission.url = util.build('/submissions/' + key);
+				this.$.getSingleSubmission.url = util.build('/submissions/' + id);
 				this.$.getSingleSubmission.generateRequest();
 			},
-			getByResultAndTaskId: function(resultKey, taskKey){
+			getByResultAndTaskId: function(resultId, taskId){
 				this.app.startLoading();
-				this.$.getMultiSubmissions.url = util.build('/results/' + resultKey + '/task/' + taskKey +'/submissions');
+				this.$.getMultiSubmissions.url = util.build('/results/' + resultId + '/task/' + taskId +'/submissions');
 				this.$.getMultiSubmissions.generateRequest();
 			},
 			_onResponse: function(){
