--- a/app/elements/services/task-service.html
+++ b/app/elements/services/task-service.html
@@ -1,4 +1,4 @@
-<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/elements/coduno-iron-ajax.html">
 
 <dom-module id="task-service">
 	<style>
@@ -7,44 +7,33 @@
 		}
 	</style>
 	<template>
-		<iron-ajax
+		<coduno-iron-ajax
 			id="postTask"
 			method="POST"
-			handle-as="json"
-			content-type="application/json"
 			last-response="{{task}}"
-			with-credentials="true"
 			on-response="_onResponse"
 			on-error="_onError">
-		</iron-ajax>
-		<iron-ajax
+		</coduno-iron-ajax>
+		<coduno-iron-ajax
 			id="getSingleTask"
 			method="GET"
-			handle-as="json"
-			content-type="application/json"
-			with-credentials="true"
 			on-response="_onTaskResponse"
 			on-error="_onError">
-		</iron-ajax>
-		<iron-ajax
+		</coduno-iron-ajax>
+		<coduno-iron-ajax
 			id="getMultiTasks"
 			method="GET"
-			handle-as="json"
-			content-type="application/json"
 			last-response="{{tasks}}"
-			with-credentials="true"
 			on-response="_onResponse"
 			on-error="_onError">
-		</iron-ajax>
-		<iron-ajax
+		</coduno-iron-ajax>
+		<coduno-iron-ajax
 			id="finishTaskRequest"
 			method="POST"
-			content-type="application/json"
-			with-credentials="true"
 			on-response="_onFinishTaskResponse"
 			on-error="_onError"
 			>
-		</iron-ajax>
+		</coduno-iron-ajax>
 	</template>
 	<script type="application/javascript" src="/scripts/behaviors/service-behavior.js"></script>
 	<script>
@@ -71,15 +60,15 @@
 				this.$.postTask.url = util.build('/tasks');
 				this.$.postTask.generateRequest();
 			},
-			getById: function(key){
+			getById: function(id){
 				this.app.startLoading();
-				this.$.getSingleTask.url = util.build('/tasks/' + key);
+				this.$.getSingleTask.url = util.build('/tasks/' + id);
 				this.$.getSingleTask.generateRequest();
 			},
-			getByIdAndUpdateResult: function(key, resultKey){
+			getByIdAndUpdateResult: function(id, resultId){
 				// TODO(victorbalan): Refactor the use of query params
 				this.app.startLoading();
-				this.$.getSingleTask.url = util.build('/tasks/' + key + '?result=' + resultKey);
+				this.$.getSingleTask.url = util.build('/tasks/' + id + '?result=' + resultId);
 				this.$.getSingleTask.generateRequest();
 			},
 			getAll: function(){
@@ -87,9 +76,9 @@
 				this.$.getMultiTasks.url = util.build('/tasks');
 				this.$.getMultiTasks.generateRequest();
 			},
-			finishTask: function(resultKey, taskIndex, lastSubmissionKey){
+			finishTask: function(resultId, taskIndex, lastSubmissionKey){
 				this.$.finishTaskRequest.url = util.build(
-					'/results/'+ resultKey +
+					'/results/'+ resultId +
 					'/finalSubmissions/' + taskIndex +
 					'?submissionKey' + lastSubmissionKey
 				);
