--- a/app/elements/login/login-wizard/login-wizard.html
+++ b/app/elements/login/login-wizard/login-wizard.html
@@ -1,12 +1,11 @@
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/elements/coduno-iron-ajax.html">
 <link rel="import" href="/bower_components/neon-animation/neon-animation.html">
 <link rel="import" href="/bower_components/neon-animation/neon-animated-pages.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="/elements/login/login-page-email/login-page-email.html">
 <link rel="import" href="/elements/login/login-page-password/login-page-password.html">
 <link rel="import" href="/elements/login/login-page-u2f/login-page-u2f.html">
-<link rel="import" href="/elements/services/user-service.html">
-<link rel="import" href="/elements/services/cookie-service.html">
 
 <dom-module id="login-wizard">
 	<template>
@@ -22,15 +21,13 @@
 		  	on-error="_onUserError"
 		    method="GET">
 		</iron-ajax>
-		<iron-ajax id="organizationRequest"
-			handle-as="json"
+		<coduno-iron-ajax
+		  	id="organizationRequest"
 			on-response="onOrganization"
 			on-error="onOrganizationError"
-			with-credentials="true"
-			url$="{{getOrganizationUrl()}}"
 			method="GET"
 		>
-		</iron-ajax>
+		</coduno-iron-ajax>
 	</template>
 </dom-module>
 <script>
@@ -66,13 +63,7 @@ Polymer({
 		}
 	},
 	listeners: {
-		'neon-animation-finish': '_afterNeon',
-		'cookie-user-changed': '_cookieUserChanged',
-		'cookie-error': '_cookieError'
-	},
-	_cookieUserChanged: function(user){
-		localStorage.user = JSON.stringify(user);
-		this.$.organizationRequest.generateRequest();
+		'neon-animation-finish': '_afterNeon'
 	},
 	setEmail: function(email){
 		this.email = email;
@@ -106,7 +97,7 @@ Polymer({
 		this.selected++;
 	},
 	login: function() {
-		this.$.userRequest.headers = {'Authorization' : 'Basic ' + btoa(this.email + ':' + this.password)};
+		this.$.userRequest.headers = JSON.parse('{ "Authorization" : "Basic ' + btoa(this.email + ':' + this.password) + '"}');
 		this.$.userRequest.url = util.build('/user');
 		this.$.userRequest.generateRequest();
 	},
@@ -131,6 +122,7 @@ Polymer({
 		// A successful response means the user has successfully authenticated
 		localStorage.authorization = 'Basic ' + btoa(this.email + ':' + this.password);
 		localStorage.user = JSON.stringify(r.detail.response);
+		this.$.organizationRequest.url = util.build('/user/organization');
 		this.$.organizationRequest.generateRequest();
 	},
 	onOrganization: function() {
@@ -139,9 +131,6 @@ Polymer({
 	},
 	onOrganizationError: function() {
 		app.login();
-	},
-	getOrganizationUrl: function() {
-		return util.build('/user/organization');
 	}
 });
 </script>
