--- a/app/elements/services/challenge-service.html
+++ b/app/elements/services/challenge-service.html
@@ -1,4 +1,4 @@
-<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/elements/coduno-iron-ajax.html">
 
 <dom-module id="challenge-service">
 	<style>
@@ -7,36 +7,27 @@
 		}
 	</style>
 	<template>
-		<iron-ajax
+		<coduno-iron-ajax
 			id="postChallenge"
 			method="POST"
-			handle-as="json"
-			content-type="application/json"
 			last-response="{{challenge}}"
-			with-credentials="true"
 			on-response="_onResponse"
 			on-error="_onError">
-		</iron-ajax>
-		<iron-ajax
+		</coduno-iron-ajax>
+		<coduno-iron-ajax
 			id="getSingleChallenge"
 			method="GET"
-			handle-as="json"
-			content-type="application/json"
 			last-response="{{challenge}}"
-			with-credentials="true"
 			on-response="_onResponse"
 			on-error="_onError">
-		</iron-ajax>
-		<iron-ajax
+		</coduno-iron-ajax>
+		<coduno-iron-ajax
 			id="getMultiChallenges"
 			method="GET"
-			handle-as="json"
-			content-type="application/json"
 			last-response="{{challenges}}"
-			with-credentials="true"
 			on-response="_onResponse"
 			on-error="_onError">
-		</iron-ajax>
+		</coduno-iron-ajax>
 	</template>
 	<script type="application/javascript" src="/scripts/behaviors/service-behavior.js"></script>
 	<script>
@@ -63,9 +54,9 @@
 				this.$.postChallenge.body = challenge;
 				this.$.postChallenge.generateRequest();
 			},
-			getById: function(key){
+			getById: function(id){
 				this.app.startLoading();
-				this.$.getSingleChallenge.url = util.build('/challenges/' + key);
+				this.$.getSingleChallenge.url = util.build('/challenges/' + id);
 				this.$.getSingleChallenge.generateRequest();
 			},
 			getLatestChallengesByProfileId: function(profileKey){
@@ -74,9 +65,9 @@
 				this.$.getMultiChallenges.url = util.build('/profiles/' + profileKey + '/challenges?finished=true&limit=10&order=-Finished');
 				this.$.getMultiChallenges.generateRequest();
 			},
-			getByCompanyId: function(companyKey){
+			getByOrganizationId: function(organizationId){
 				this.app.startLoading();
-				this.$.getMultiChallenges.url = util.build('/companies/' + companyKey + '/challenges');
+				this.$.getMultiChallenges.url = util.build('/organizations/' + organizationId + '/challenges');
 				this.$.getMultiChallenges.generateRequest();
 			},
 			_onResponse: function(){
