refactor login workflow

--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -22,12 +22,12 @@
 			>
 		</coduno-iron-ajax>
 
-		<codunoiron-ajax
+		<coduno-iron-ajax
 			id="challengeRequest"
 			on-response="onChallengeResponse"
 			debounce-duration="1000"
 			>
-		</codunoiron-ajax>
+		</coduno-iron-ajax>
 
 		<cookie-service id="cookieService"></cookie-service>
 
