--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -6,7 +6,9 @@ window.addEventListener('WebComponentsReady', function() {
 	}
 	
 	page('/', function() {
-		if (util.organization()) {
+		if (!localStorage.authorization){
+			page('/login');
+		}else if (util.organization()) {
 			page('/candidates');
 		} else {
 			page('/challenge');
@@ -16,12 +18,9 @@ window.addEventListener('WebComponentsReady', function() {
 	page('/token/:token', function(context) {
 		var token = context.params.token;
 		var decodedToken = atob(token).split(':');
-
-		Polymer.Base.importHref('/elements/services/cookie-service.html', function(){
-			app.$.cookieService.getCookie('Token '+ decodedToken[1]);
-		});
-
+		localStorage.setItem('authorization', 'Token '+ decodedToken[1]);
 		localStorage.setItem('challenge', decodedToken[0]);
+		page('/challenge');
 	});
 
 	page('/register', function() {
