--- a/app/elements/task/task-card.html
+++ b/app/elements/task/task-card.html
@@ -56,7 +56,7 @@
 				icon="{{selectorIcon}}" on-click="_toggleSelectTask" style$="{{addButtonStyle}}"></paper-icon-button>
 			</template>
 			<div id="content" on-click="_viewTaskDetail">
-				<h2>{{task.Assignment.Name}}</h2>
+				<h2>{{task.name}}</h2>
 				<div class="taskDuration">
 					<iron-icon icon="alarm"></iron-icon>
 					<span>{{duration}}</span>
@@ -136,7 +136,7 @@
 				}
 			},
 			_computeDuration: function (task) {
-				return util.computeDuration(task.Assignment.Duration);
+				return util.computeDuration(task.duration);
 			},
 			_selectionViewObserver: function () {
 				this.showSelect = this.selectionView;
@@ -154,7 +154,7 @@
 			},
 			_viewTaskDetail: function(){
 				if(!this.selectionView){
-					page.redirect('/tasks/' + this.task.Key);
+					page.redirect('/tasks/' + this.task.id);
 				}else{
 					this._toggleSelectTask();
 				}
