--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -4,7 +4,7 @@ window.addEventListener('WebComponentsReady', function() {
 	function checkIsOrganization() {
 		return !!localStorage.organization || page.redirect('/login');
 	}
-	
+
 	page('/', function() {
 		if (!localStorage.authorization){
 			page('/login');
@@ -77,11 +77,11 @@ window.addEventListener('WebComponentsReady', function() {
 		});
 	});
 
-	page('/tasks/:taskKey', function(data) {
+	page('/tasks/:id', function(data) {
 		checkIsOrganization();
 		app.route = 'task-detail';
 		Polymer.Base.importHref('/elements/task/task-detail.html', function() {
-			app.$.taskDetail.getTask(data.params.taskKey);
+			app.$.taskDetail.getTask(data.params.id);
 		});
 	});
 
