--- a/app/elements/services/challenge-service.html
+++ b/app/elements/services/challenge-service.html
@@ -70,6 +70,11 @@
 				this.$.getMultiChallenges.url = util.build('/organizations/' + organizationId + '/challenges');
 				this.$.getMultiChallenges.generateRequest();
 			},
+			getAll: function(){
+				this.app.startLoading();
+				this.$.getMultiChallenges.url = util.build('/challenges?organization=' + util.organization().id);
+				this.$.getMultiChallenges.generateRequest();
+			},
 			_onResponse: function(){
 				this.app.stopLoading();
 			}
