--- a/app/elements/services/task-service.html
+++ b/app/elements/services/task-service.html
@@ -73,7 +73,7 @@
 			},
 			getAll: function(){
 				this.app.startLoading();
-				this.$.getMultiTasks.url = util.build('/tasks');
+				this.$.getMultiTasks.url = util.build('/tasks?organization=' + util.organization().id);
 				this.$.getMultiTasks.generateRequest();
 			},
 			finishTask: function(resultId, taskIndex, lastSubmissionKey){
